--- a/cliff.toml
+++ b/cliff.toml
@@ -19,7 +19,7 @@ body = """
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | upper_first }}
     {% for commit in commits %}
-        - [`{{ commit.id | truncate(length=7, end="") }}`](https://github.com/nexterias/actions-vercel/commit/{{ commit.id }})\
+        - [`{{ commit.id | truncate(length=7, end="") }}`](https://github.com/nexterias/actions-vercel/commit/{{ commit.id }}) {{ commit.message | upper_first }}\
     {% endfor %}
 {% endfor %}\n
 """
