--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^5.1.1",
-    "undici": "^5.24.0"
+    "@actions/github": "^5.1.1"
   },
   "devDependencies": {
     "@nexterias/prettier-config": "^1.0.1",
