--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
   release:
     name: Release
     needs: [build]
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') && github.actor != 'github-actions'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -131,3 +131,25 @@ jobs:
         with:
           draft: true
           body: ${{ steps.git-cliff.outputs.content }}
+
+  tag:
+    name: Tag
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/') && github.actor != 'github-actions'
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
+        with:
+          fetch-depth: 0
+
+      - name: Get target tag
+        id: tag
+        run: echo "name=$(echo '${{ github.ref }}' | sed -r 's/refs\/tags\/(v[0-9]+)\..*/\1/')"
+
+      - name: Update & Push tag
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git tag -f ${{ steps.tag.outputs.name }} ${{ github.ref }}
+          git push -f origin ${{ steps.tag.outputs.name }}
