--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,7 @@ jobs:
           body: ${{ steps.git-cliff.outputs.content }}
 
   tag:
+    needs: [build]
     name: Tag
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/') && github.actor != 'github-actions'
