--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "undici": "^5.27.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.3.3",
     "@nexterias/prettier-config": "^1.0.1",
     "@types/node": "^20.9.4",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
