--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,6 @@
   "recommendations": [
     "github.vscode-github-actions",
     "vivaxy.vscode-conventional-commits",
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
+    "biomejs.biome"
   ]
 }
