--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "eslint.packageManager": "pnpm",
-  "editor.formatOnSave": true
+  "editor.defaultFormatter": "biomejs.biome"
 }
