--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,14 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.3.3/schema.json",
+	"files": {
+		"ignore": ["./dist/**"]
+	},
   "organizeImports": {
     "enabled": true
   },
+	"formatter": {
+		"enabled": true
+	},
   "linter": {
     "enabled": true,
     "rules": {
