--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "build": "ncc build -t --minify --license=license.txt ./src/index.ts",
-    "format": "prettier -w .",
-    "format:check": "prettier -c .",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix"
+    "check": "biome check .",
+    "check:apply": "biome check . --apply",
+    "check:apply-unsafe": "biome check . --apply-unsafe"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
