--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,7 @@ jobs:
 
       - run: pnpm type-check
 
-      - run: pnpm format:check
-
-      - run: pnpm lint
+      - run: pnpm biome ci .
 
       - run: pnpm build
 
