chore: switch to Biome (#156)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,7 @@
 {
-  "recommendations": [
-    "github.vscode-github-actions",
-    "vivaxy.vscode-conventional-commits",
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
-  ]
+	"recommendations": [
+		"github.vscode-github-actions",
+		"vivaxy.vscode-conventional-commits",
+		"biomejs.biome"
+	]
 }
