--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "eslint.packageManager": "pnpm",
-  "editor.formatOnSave": true
+	"editor.defaultFormatter": "biomejs.biome",
+	"editor.codeActionsOnSave": {
+		"quickfix.biome": true,
+		"source.organizeImports.biome": true
+	}
 }
