--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.2",
   "author": "InkoHX <me@inkohx.dev>",
   "license": "MIT",
-  "prettier": "@nexterias/prettier-config",
   "scripts": {
     "type-check": "tsc --noEmit",
     "build": "ncc build -t --minify --license=license.txt ./src/index.ts",
-    "format": "prettier -w .",
-    "format:check": "prettier -c .",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix"
+    "check": "biome check .",
+    "check:apply": "biome check . --apply",
+    "check:apply-unsafe": "biome check . --apply-unsafe"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
@@ -19,14 +17,9 @@
     "undici": "^5.27.2"
   },
   "devDependencies": {
-    "@nexterias/prettier-config": "^1.0.1",
-    "@types/node": "^20.9.4",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@biomejs/biome": "^1.3.3",
+    "@types/node": "^20.9.3",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
 }
