refactor: make github-token input optional (#229)

--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,8 @@ inputs:
     description: User ID within Vercel
     required: true
   github-token:
-    description: GitHub Token
+    description: Personal Access Token (PAT) is used to create commit status and deployments.
+    default: ${{ github.token }}
   production:
     description: Create a production deployment
     default: 'false'
