--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
-      deployments: write
-      statuses: write
-      pull-requests: write
+      #deployments: write
+      #statuses: write
+      #pull-requests: write
 
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
