--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
 	"dependencies": {
 		"@actions/core": "^1.10.1",
 		"@actions/exec": "^1.1.1",
-		"@actions/github": "^6.0.0",
-		"undici": "^6.6.2"
+		"@actions/github": "^6.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.4",
