--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.3.3/schema.json",
 	"files": {
-		"ignore": ["./dist/**", "./.vercel/**/*"]
+		"ignore": ["./dist/**", "./.vercel/**/*", "./docs/.vitepress/cache/**/*"]
 	},
 	"organizeImports": {
 		"enabled": true
