--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"@actions/core": "^1.10.1",
 		"@actions/exec": "^1.1.1",
-		"@actions/github": "^6.0.0"
+		"@actions/github": "^6.0.0",
+		"dotenv": "^16.4.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.7.2",
